# fgl

./: .gitignore  Makefile  README.md  meson.build
contrib/: Makefile.lcc  Makefile.vc  Makefile.win  fgl_circle.txt
example/: demo3d.c  demo3d_private.h
res/: text
src/: fgl.c  fgl.h  fgl2.c  fgl2.h  fgl3.c  fgl3.h  fglaux.c  fglaux.h  fglb.c  fglb.h  fgle.c  fgle.h  fglf.c  fglf.h  fglm.c  fgls.c  fgls.h  fglt.c  fglt.h  fglu.c  fglu.h  flgm.h  key.h  syslog.c
